# Shadman_Choudhury_F23

./: .gitignore  CMakeLists.txt  Game_SC.sln  README.md  Uniqueness.txt
Assets/Shaders/: DefaultFragmentShader.glsl  DefaultVertexShader.glsl
Game_SC/: CMakeLists.txt  Game_SC.vcxproj  Game_SC.vcxproj.filters  MyGame.cpp  MyGame.h  main.cpp
Orchid/: CMakeLists.txt  Events.cpp  Events.h  GameWindow.cpp  GameWindow.h  Keys.h  Orchid.vcxproj  Orchid.vcxproj.filters  OrchidApp.cpp  OrchidApp.h  Picture.cpp  Picture.h  PictureImplementation.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Unit.cpp  Unit.h  UnitSet.cpp  UnitSet.h  WindowImplementation.h  pch.h  placeholder.cpp  utilities.h
Orchid/GLFWCode/: GLFWImplementation.cpp  GLFWImplementation.h  OpenGLPicture.cpp  OpenGLPicture.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
Orchid/include/: Orchid.h
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
